runFormatTest(import.meta, ["sassparser"], { trailingComma: "none" });
runFormatTest(import.meta, ["sassparser"], { trailingComma: "es5" });
